--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -102,7 +102,7 @@
 \usepackage{graphicx}
 
 \usepackage{enumitem}
-\setitemize[1]{itemsep=0.0em, partopsep=0.2pt, parsep=\parskip, topsep=0pt}
+\setitemize[1, 2]{topsep=0em, itemsep=0.0em, partopsep=0em, leftmargin=1em}
 % we are running pdflatex, so convert .eps files to .pdf
 %\usepackage[dvips]{epsfig}
 
